# WebX

./: .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright-boot.mjs
cmake/: x86_64-linux-gnu.cmake
guest-icd/: CMakeLists.txt  vkwebx.map  vkwebx_icd.json
guest-icd/src/: vkwebx.c  vkwebx_pipeline.c  vkwebx_resources.c  vkwebx_surface.c  vkwebx_wire.h  xcb_stub.c
harness/: canary-host.mjs  canary_wasm.js  canary_wasm_bg.wasm  cheerpx-host.mjs  index.html  server.mjs  vk-bridge.mjs  vkwebgpu-plugin.mjs  worker.mjs
protocol/: commands.h  wire-format.md
steam/: build-vkwebgpu.sh  extract-image.ps1  extract-image.py  extract-rootfs.sh  launch.sh  prepare-image-qemu.ps1  prepare-image.sh  update-icd.sh  vkwebgpu_icd.json  webx-convert.sh
steam/webx-qemu-bundle/: setup.sh  vkwebgpu_icd.json
